--- a/Part3_v1_Training_TTS.ipynb
+++ b/Part3_v1_Training_TTS.ipynb
@@ -1,29 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "Part3_v1_Training TTS",
-      "provenance": [],
-      "machine_shape": "hm",
-      "collapsed_sections": [],
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/hantswilliams/voiceCloneTts/blob/main/Part3_v1_Training_TTS.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -53,6 +34,7 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -60,19 +42,18 @@
         "id": "umI5wmJWINtn",
         "outputId": "0a6fbbbf-b2cb-4b7d-afcd-8df2164615b4"
       },
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
-      ],
-      "execution_count": 1,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Mounted at /content/drive\n"
           ]
         }
+      ],
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
       ]
     },
     {
@@ -87,47 +68,18 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 2,
       "metadata": {
-        "id": "cKLe9qLoJLhg",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "cKLe9qLoJLhg",
         "outputId": "53dfd426-fc7c-4fe4-d8f0-5aff0e83aa99"
       },
-      "source": [
-        "import os\n",
-        "if os.path.isdir(\"/content/drive/MyDrive/VoiceCloning\"):\n",
-        "    %cd \"/content/drive/My Drive/VoiceCloning/TTS\"\n",
-        "    !pip install -e .[all]\n",
-        "    !pip install --upgrade numpy\n",
-        "    %cd ..\n",
-        "    \n",
-        "else:\n",
-        "    #installs all needed files and libraries\n",
-        "    %cd \"/content/drive/My Drive/\"\n",
-        "    !mkdir VoiceCloning\n",
-        "    %cd VoiceCloning\n",
-        "    !git clone https://github.com/coqui-ai/TTS\n",
-        "    !mkdir datasets\n",
-        "    !mkdir log \n",
-        "    !mkdir configs\n",
-        "    !mkdir models\n",
-        "    !mkdir output\n",
-        "    !mkdir WadaSNR\n",
-        "\n",
-        "    !gdown https://drive.google.com/uc?id=1BksOJ-I10F0Itt2WM6kKrNmKYgOVSNSl -O /content/drive/MyDrive/VoiceCloning/models/vits_model.tar #change this link to change model to train off of (for instance training off of a different language)\n",
-        "    !gdown https://drive.google.com/uc?id=1gqogUxwBeuzL0qxJJBNArYzga79P-GDP -O /content/drive/MyDrive/VoiceCloning/TTS/TTS/tts/datasets/formatters.py\n",
-        "    !gdown https://drive.google.com/uc?id=180cb7NPgbcqwqCTdZv_2nc4JsQaC0Wcl -O /content/drive/MyDrive/VoiceCloning/configs/generic_config.json\n",
-        "    !gdown https://drive.google.com/uc?id=1BFY3Q8HInytSfOG3i3lsIAR3XdVcgBc1 -O /content/drive/MyDrive/VoiceCloning/configs/train_vits.py #\n",
-        "    %cd TTS \n",
-        "    !pip install .\n",
-        "    !pip install --upgrade numpy"
-      ],
-      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "/content/drive/My Drive/VoiceCloning/TTS\n",
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
@@ -465,22 +417,49 @@
             "/content/drive/MyDrive/VoiceCloning\n"
           ]
         }
+      ],
+      "source": [
+        "import os\n",
+        "if os.path.isdir(\"/content/drive/MyDrive/VoiceCloning\"):\n",
+        "    %cd \"/content/drive/My Drive/VoiceCloning/TTS\"\n",
+        "    !pip install -e .[all]\n",
+        "    !pip install --upgrade numpy\n",
+        "    %cd ..\n",
+        "    \n",
+        "else:\n",
+        "    #installs all needed files and libraries\n",
+        "    %cd \"/content/drive/My Drive/\"\n",
+        "    !mkdir VoiceCloning\n",
+        "    %cd VoiceCloning\n",
+        "    !git clone https://github.com/coqui-ai/TTS\n",
+        "    !mkdir datasets\n",
+        "    !mkdir log \n",
+        "    !mkdir configs\n",
+        "    !mkdir models\n",
+        "    !mkdir output\n",
+        "    !mkdir WadaSNR\n",
+        "\n",
+        "    !gdown https://drive.google.com/uc?id=1BksOJ-I10F0Itt2WM6kKrNmKYgOVSNSl -O /content/drive/MyDrive/VoiceCloning/models/vits_model.tar #change this link to change model to train off of (for instance training off of a different language)\n",
+        "    !gdown https://drive.google.com/uc?id=1gqogUxwBeuzL0qxJJBNArYzga79P-GDP -O /content/drive/MyDrive/VoiceCloning/TTS/TTS/tts/datasets/formatters.py\n",
+        "    !gdown https://drive.google.com/uc?id=180cb7NPgbcqwqCTdZv_2nc4JsQaC0Wcl -O /content/drive/MyDrive/VoiceCloning/configs/generic_config.json\n",
+        "    !gdown https://drive.google.com/uc?id=1BFY3Q8HInytSfOG3i3lsIAR3XdVcgBc1 -O /content/drive/MyDrive/VoiceCloning/configs/train_vits.py #\n",
+        "    %cd TTS \n",
+        "    !pip install .\n",
+        "    !pip install --upgrade numpy"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Don't forget to change python dataset path and config values before training via the colab text editor! (its under the configs folder)"
-      ],
       "metadata": {
         "id": "wciK-C7_iHaU"
-      }
+      },
+      "source": [
+        "Don't forget to change python dataset path and config values before training via the colab text editor! (its under the configs folder)"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!pip install TTS"
-      ],
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -488,11 +467,10 @@
         "id": "g5FVj0INg7rz",
         "outputId": "9dd1e4a4-84c7-4cdf-84bf-5adae1bfbb99"
       },
-      "execution_count": 3,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting TTS\n",
@@ -592,19 +570,14 @@
             "Successfully installed TTS-0.7.1\n"
           ]
         }
+      ],
+      "source": [
+        "!pip install TTS"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# # # running it for the first time? don't change this. \n",
-        "# # # resuming? get the path to your latest .tar file and use that\n",
-        "\n",
-        "resume_from = \"/content/drive/MyDrive/VoiceCloning/models/vits_model.tar\"\n",
-        "!python /content/drive/MyDrive/VoiceCloning/configs/train_vits.py --restore_path {resume_from}\n",
-        "\n",
-        "# !python /content/drive/MyDrive/VoiceCloning/configs/train_vits.py "
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -612,11 +585,10 @@
         "id": "RW8QWttoeR3D",
         "outputId": "410713ec-501d-4083-b478-befab705773f"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "\u001b[1;30;43mStreaming output truncated to the last 5000 lines.\u001b[0m\n",
             " | > Num. instances discarded samples: 0\n",
@@ -5621,21 +5593,56 @@
             " | > Synthesizing test sentences.\n"
           ]
         }
+      ],
+      "source": [
+        "# # # running it for the first time? don't change this. \n",
+        "# # # resuming? get the path to your latest .tar file and use that\n",
+        "\n",
+        "resume_from = \"/content/drive/MyDrive/VoiceCloning/models/vits_model.tar\"\n",
+        "!python /content/drive/MyDrive/VoiceCloning/configs/train_vits.py --restore_path {resume_from}\n",
+        "\n",
+        "# !python /content/drive/MyDrive/VoiceCloning/configs/train_vits.py "
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "k2fO-F8hXPXw"
+      },
+      "outputs": [],
       "source": [
         "!tts --text \"This is a program about Applied Health Informatics.\" \\\n",
         "    --model_path /content/drive/MyDrive/VoiceCloning/log/INSERT_MODEL.tar \\\n",
         "    --config_path /content/drive/MyDrive/VoiceCloning/log/CONFIG.json \\\n",
         "    --out_path /content/drive/MyDrive/VoiceCloning/output/output.wav\n"
-      ],
-      "metadata": {
-        "id": "k2fO-F8hXPXw"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "collapsed_sections": [],
+      "include_colab_link": true,
+      "machine_shape": "hm",
+      "name": "Part3_v1_Training TTS",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3.6.4 64-bit ('3.6.4')",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.6.4"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "f691c77f2932b50764e6cbe55ba6da9aefcdc0d1195f88baaf9e9338c7c6b4c0"
+      }
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
